Configure CORS preflight support for Vercel deployment